Squelch warnings.